fix: elementor row overlay not visible

--- a/assets/css/unminified/style-rtl.css
+++ b/assets/css/unminified/style-rtl.css
@@ -5613,6 +5613,10 @@ input[type="color"]::-webkit-color-swatch {
   right: 0 !important;
 }
 
+.elementor-editor-active .elementor-element > .elementor-element-overlay {
+  z-index: 100;
+}
+
 /**
  * Flexbox Framework
  *
