--- a/assets/css/unminified/style.css
+++ b/assets/css/unminified/style.css
@@ -5613,6 +5613,10 @@ input[type="color"]::-webkit-color-swatch {
   left: 0 !important;
 }
 
+.elementor-editor-active .elementor-element > .elementor-element-overlay {
+  z-index: 100;
+}
+
 /**
  * Flexbox Framework
  *
