--- a/sass/site/compatibility/page-builder/elementor.scss
+++ b/sass/site/compatibility/page-builder/elementor.scss
@@ -9,3 +9,11 @@
 		left: 0 !important;
 	}
 }
+
+.elementor-editor-active {
+	.elementor-element {
+		&>.elementor-element-overlay {
+			z-index: 100;
+		}
+	}
+}
